# practice-python-challenges

./: .gitignore  LICENSE.txt  README.md  project_task.todo  pyproject.toml  readme.txt  run_tests.sh
src/project_01/: README.md  script_project_01.py
src/project_01_character_input/: README.md  script.py
src/project_02/: README.md  script_project_02.py
src/project_03/: README.md  script_project_03.py
src/project_04/: README.md  script_project_04.py
src/project_05/: README.md  script_project_05.py
src/project_06/: README.md  script_project_06.py
src/project_07/: README.md  script_project_07.py
src/project_08/: README.md  script_project_08.py
src/project_09/: README.md  script_project_09.py
src/project_10/: README.md  script_project_10.py
src/project_11/: README.md  script_project_11.py
src/project_12/: README.md  script_project_12.py
src/project_13/: README.md  script_project_13.py
src/project_14/: README.md  script_project_14.py
src/project_15/: README.md  script_project_15.py
src/project_16/: README.md  script_project_16.py
src/project_17/: README.md  script_project_17.py
src/project_18/: README.md  script_project_18.py
src/project_19/: README.md  script_project_19.py
src/project_20/: README.md  script_project_20.py
src/project_21/: README.md  script_project_21.py
src/project_22/: README.md  file_io.py  script_project_22.py
src/project_23/: README.md  script_project_23.py
tests/project_01/: test_script_project_01.py
tests/project_01_test/: test_script_project_01.py
tests/project_02/: test_project_02.py
(+30 files in other folders)
