[project]
name = "python-40-challenge"
version = "0.1.0"
description = "A log of my Python programming journey and challenge solutions."
authors = [{ name = "Xanderzoid" }]
dependencies = [
    "pytest",
    "black",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src/project_01",
    "src/project_02",
    "src/project_03",
    "src/project_04",
    "src/project_05",
    "src/project_06",
    "src/project_07",
    "src/project_08",
    "src/project_09"
]